<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="@dimen/margin_grande"
        android:layout_marginEnd="@dimen/margin_grande"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="60dp"
            android:src="@drawable/municipalidad" />

        <Switch
            android:id="@+id/actmain_sw_modologin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_grande"
            android:text="@string/actmain_sw_modologin" />


        <EditText
            android:id="@+id/activitymain_et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_grande"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/actmain_et_username_hint" />

        <EditText
            android:id="@+id/activitymain_et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_grande"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/actmain_et_password_hint" />


        <Button
            android:id="@+id/activitymain_btn_inicio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_mediano"
            android:onClick="onClickInicio"
            android:text="@string/actmain_btn_inicio"
            android:textColor="@color/black"
            app:backgroundTint="@null"
            android:background="@drawable/btn_principal_sos"/>

        <TextView
            android:id="@+id/activitymain_txt_registrar"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_grande"
            android:text="@string/actmain_txt_registrar"
            android:textColor="@color/blue_dark"
            android:onClick="onClickPerfilCiudadano" />


    </LinearLayout>





</androidx.constraintlayout.widget.ConstraintLayout>