<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.PerfilCiudadanoActivity">

    <TextView
        android:id="@+id/activityperfilciudadano_tv_titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_grande"
        style="@style/Titulo_principal"
        android:text="@string/activityperfilciudadano_tv_titulo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/activityperfilciudadano_img_foto"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="@dimen/margin_mediano"
        android:layout_marginStart="@dimen/margin_grande"
        android:layout_marginEnd="@dimen/margin_grande"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activityperfilciudadano_tv_titulo"
        tools:srcCompat="@tools:sample/avatars" />

    <Spinner
        android:id="@+id/activityperfilciudadano_spn_tipodocumento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_mediano"
        android:layout_marginStart="@dimen/margin_grande"
        android:layout_marginEnd="@dimen/margin_grande"
        style="@style/Spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activityperfilciudadano_img_foto" />


    <EditText
        android:id="@+id/activityperfilciudadano_et_numerodocumento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_mediano"
        android:layout_marginStart="@dimen/margin_grande"
        android:layout_marginEnd="@dimen/margin_grande"
        android:hint="@string/activityperfilciudadano_et_numerodocumento_hint"
        android:inputType="number"
        style="@style/EditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activityperfilciudadano_spn_tipodocumento" />

    <EditText
        android:id="@+id/activityperfilciudadano_et_apellidopaterno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_mediano"
        android:layout_marginStart="@dimen/margin_grande"
        android:layout_marginEnd="@dimen/margin_grande"
        android:hint="@string/activityperfilciudadano_et_apellidopaterno_hint"
        android:inputType="textPersonName"
        style="@style/EditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activityperfilciudadano_et_numerodocumento" />

    <EditText
        android:id="@+id/activityperfilciudadano_et_apellidomaterno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_mediano"
        android:layout_marginStart="@dimen/margin_grande"
        android:layout_marginEnd="@dimen/margin_grande"
        android:hint="@string/activityperfilciudadano_et_apellidomaterno_hint"
        android:inputType="textPersonName"
        style="@style/EditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activityperfilciudadano_et_apellidopaterno" />

    <EditText
        android:id="@+id/activityperfilciudadano_et_nombres"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_mediano"
        android:layout_marginStart="@dimen/margin_grande"
        android:layout_marginEnd="@dimen/margin_grande"
        android:hint="@string/activityperfilciudadano_et_nombres_hint"
        android:inputType="textPersonName"
        style="@style/EditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activityperfilciudadano_et_apellidomaterno" />

    <EditText
        android:id="@+id/activityperfilciudadano_et_celular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_mediano"
        android:layout_marginStart="@dimen/margin_grande"
        android:layout_marginEnd="@dimen/margin_grande"
        android:hint="@string/activityperfilciudadano_et_celular_hint"
        android:inputType="phone"
        style="@style/EditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activityperfilciudadano_et_nombres" />

    <EditText
        android:id="@+id/activityperfilciudadano_et_correo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_mediano"
        android:layout_marginStart="@dimen/margin_grande"
        android:layout_marginEnd="@dimen/margin_grande"
        android:hint="@string/activityperfilciudadano_et_correo_hint"
        android:inputType="textEmailAddress"
        style="@style/EditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activityperfilciudadano_et_celular" />

    <EditText
        android:id="@+id/activityperfilciudadano_et_direccion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_mediano"
        android:layout_marginStart="@dimen/margin_grande"
        android:layout_marginEnd="@dimen/margin_grande"
        android:hint="@string/activityperfilciudadano_et_direccion_hint"
        android:inputType="textPostalAddress"
        style="@style/EditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activityperfilciudadano_et_correo" />

    <Button
        android:id="@+id/activityperfilciudadano_btn_guardar"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_grande"
        android:layout_marginStart="@dimen/margin_grande"
        android:layout_marginEnd="@dimen/margin_grande"
        android:text="@string/activityperfilciudadano_btn_guardar_text"
        style="@style/EditText"
        app:layout_constraintTop_toBottomOf="@+id/activityperfilciudadano_et_direccion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>